# WindowResizer

./: .gitignore  README.md  WindowResizer.spec  main.py  main_window.py  main_window.ui  prebuild.py  presets.py  pyproject.toml  utils.py
i18n/: zh_CN.ts
